Fix spacing at top

--- a/components/SelectItem/index.scss
+++ b/components/SelectItem/index.scss
@@ -16,6 +16,10 @@
     outline: none;
   }
 
+  &:first-child {
+    margin-top: $unit;
+  }
+
   &:last-child {
     margin-bottom: $unit;
   }
